# qt_game_of_life

./: CMakeLists.txt  README.md  createstatefield.ui  main.cpp  mainfieldwindow.ui  mainwindow.ui  startstatewindowsettings.ui
headers/controller/: cell.h  field.h  game.h  state.h
headers/views/: createstatefield.h  field.h  mainfieldwindow.h  mainwindow.h  params.h  startstatewindowsettings.h
src/controller/: cell.cpp  field.cpp  game.cpp  state.cpp
src/views/: createstatefield.cpp  field.cpp  mainfieldwindow.cpp  mainwindow.cpp  startstatewindowsettings.cpp
